crates/rlf-macros/tests/fail/phrase_bare_ref.rs
use rlf::rlf;

rlf! {
    cards($n) = "{$n} cards";
    bad = "{cards}";
}

fn main() {}
